2005-08-06  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/main.c : Change seteuid() to plain setuid() which is
	  more portable and has the intended effect.

	* src/modules/sshcmd.c : Change setenv() to putenv() for portability.

	* src/modules/sshcmd.c : Remove sshcmdr() which is now identical
	  to sshcmdrw().

2005-08-02  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c, src/pdsh/pcp_server.c : Remove debug code for pdcp 
	  which was accidentally committed.

	* src/pdsh/pcp_server.c : Change all writes to go through stdout fd 
	  instead of stdin fd. Stdin will work when pdcp is invoked via rshd
	  started from inetd, and appears to work under Linux even for sshd, 
	  but writing to stdin will block on many systems, hanging the pcp
	  protocol. (Yehia Beyh <Yehia.Beyh@hp.com>)

	* : tag pdsh-2.6

2005-07-21  Mark Grondona <mgrondona@llnl.gov>

	* src/common/hostlist.c, src/common/hostlist.h : Update hostlist code
	  to latest version from LSD-Tools project, which fixes many bugs.

	* src/pdsh/mod.c (_dir_ok) : Directory permissions are ok even if 
	  other has write permission if the sticky bit is set.

	* src/pdsh/mod.c (_mod_load_dynamic_modules) : Don't load module
	  files owned by users other than current user and root, or files that
	  have write permissions for other.

	* : tag pdsh-2.5

2005-07-20  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/sshcmd.c : Add ssh "reaper" thread to collect exit status
	  of all ssh commands and print any nonzero exit codes at end of pdsh run.
	  No longer invoke ssh backgrounded, as this is no longer needed since
	  pdsh now reaps these processes.

	* config/Make-rpm.mk, Makefile.am : Remove unneeded "make rpm" target.

	* doc/pdsh.1.in : Fix up some manpage text.

2005-07-19  Mark Grondona <mgrondona@llnl.gov>

	* src/common/xmalloc.h, src/common/xmalloc.c : Strdup takes const arg.

	* src/modules/mqcmd.c (mqcmd) : Fail gracefully if munge_ctx_create
	  returns NULL.

